--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bokeh==0.12.13
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
@@ -9,8 +10,13 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+numpy==1.14.0
+python-dateutil==2.6.1
+PyYAML==3.12
 requests==2.18.4
+six==1.11.0
 spotipy==2.4.4
+tornado==4.5.3
 urllib3==1.22
 visitor==0.1.3
 Werkzeug==0.14.1
