--- a/requirements.txt
+++ b/requirements.txt
@@ -11,13 +11,16 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.0
+ortools==6.6.4656
 pandas==0.22.0
+protobuf==3.5.1
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 scikit-learn==0.19.1
+scipy==1.0.0
 six==1.11.0
 spotipy==2.4.4
 tornado==4.5.3
