trying to get aws

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ venv.bak/
 config.json
 .tokens
 settings.cfg
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
