--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-WTF==0.14.2
+httplib2==0.10.3
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.0
+oauth2==1.9.0.post1
 ortools==6.6.4656
 pandas==0.22.0
 protobuf==3.5.1
