got playlists refactored

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+astroid==1.6.1
+attrs==17.4.0
+autopep8==1.3.4
 bokeh==0.12.13
 certifi==2018.1.18
 chardet==3.0.4
@@ -5,28 +8,37 @@ click==6.7
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-KVSession==0.6.2
 Flask-WTF==0.14.2
 httplib2==0.10.3
 idna==2.6
+isort==4.3.2
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 numpy==1.14.0
 oauth2==1.9.0.post1
-ortools
+ortools==6.6.4656
 pandas==0.22.0
 protobuf==3.5.1
+pycodestyle==2.3.1
+pylint==1.8.2
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 pytz==2017.3
 PyYAML==3.12
+redis==2.10.6
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
+simplekv==0.11.7
 six==1.11.0
 spotipy==2.4.4
 tornado==4.5.3
 urllib3==1.22
 visitor==0.1.3
 Werkzeug==0.14.1
+wrapt==1.10.11
 WTForms==2.1
