--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-KVSession==0.6.2
+Flask-Mobility==0.1.1
 Flask-WTF==0.14.2
 httplib2==0.10.3
 idna==2.6
